--- a/src/tree/index.css
+++ b/src/tree/index.css
@@ -1,6 +1,11 @@
 .tree {
-    background-color: #efefef;
-    height: 100%;
-    padding: 10px;
-    font-family: monospace
+  background-color: #efefef;
+  height: 100%;
+  padding: 10px;
+  font-family: monospace;
+}
+
+.tree ul, .tree ul li {
+  display: flex;
+  flex-direction: column-reverse;
 }
